--- a/.gitignore
+++ b/.gitignore
@@ -7,14 +7,16 @@
 # macOS system storage files
 .DS_Store
 
-# ignore generated files
-Fetch Quest.inform/Build/
-Fetch Quest.inform/Index/
-Fetch Quest.inform/Metadata.iFiction
-Fetch Quest.inform/Release.blurb
-Fetch Quest.inform/Settings.plist
-Fetch Quest.inform/Skein.skein
-Fetch Quest.inform/manifest.plist
-Fetch Quest.inform/notes.rtf
-Fetch Quest.inform/uuid.txt
-Fetch Quest.materials/
+*.materials
+*.inform/Build/
+*.inform/Index/
+*.inform/Metadata.iFiction
+*.inform/Release.blurb
+*.inform/Settings.plist
+*.inform/Skein.skein
+*.inform/manifest.plist
+*.inform/notes.rtf
+*.inform/uuid.txt
+
+# macOS system storage files
+.DS_Store
